<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:text="@string/menu"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        android:textAlignment="center" />

    <Button
        android:id="@+id/btnRandomTeam"
        android:layout_width="251sp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvMenu"
        android:layout_marginTop="20sp"
        android:layout_centerHorizontal="true"
        android:text="@string/random_team"
        android:onClick="rTeam"/>

    <Button
        android:id="@+id/btnDice"
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnRandomTeam"
        android:layout_marginTop="5sp"
        android:layout_centerHorizontal="true"
        android:text="@string/dice"
        android:onClick="rDice"/>

    <Button
        android:id="@+id/btnRandomNumber"
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnDice"
        android:layout_marginTop="5sp"
        android:layout_centerHorizontal="true"
        android:text="@string/random_number"/>

    <Button
        android:id="@+id/btnRandomPassword"
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnRandomNumber"
        android:layout_marginTop="5sp"
        android:layout_centerHorizontal="true"
        android:text="@string/random_password"/>

</RelativeLayout>